<resources>
    <string name="app_name">Open Grid Map</string>
    <string name="action_submissions">Submissions</string>
    <string name="action_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_sign_in">Please Sign In to the App to Continue</string>
    <string name="plus_sign_out">Sign Out</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_shutter_image_button_description">Camera shutter button</string>
    <string name="submission_confirm_button_description">Submission confirmation button</string>
    <string name="title_activity_submissions">All of your Submissions</string>
    <string name="title_activity_submission">Submission Overview</string>
    <string name="no_of_images">No. of Images</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="best_accuracy">Best Accuracy</string>
    <string name="title_section1">Submission Info</string>
    <string name="title_section2">Images</string>
    <string name="title_section3">Tags</string>
    <string name="title_section4">Map</string>
    <string name="title_activity_submission_status">Submission Details</string>
    <string name="type_format" formatted="false">Power Element Type : %1$s</string>
    <string name="location_format" formatted="false">Coordinates : %1$s</string>
    <string name="accuracy_format" formatted="false">Location Accuracy : %1$.2fm</string>
    <string name="power_tags_format" formatted="false">Power Tags : %1$s</string>
    <string name="date_format" formatted="false">Date and Time : %1$s</string>
    <string name="status_format" formatted="false">Status : %1$s</string>
    <string name="title_activity_tag_selection">Select any additional tags if any</string>
    <string name="title_activity_about">About Open Grid Map</string>
    <string name="label_about">About</string>
    <string name="text_about">We are an open community that crowdsources realistic power grid data to be used for research purposes. Here you will find the tools for crowdsourcing power grid data. The goal is to create an open platform for inferring realistic power grids based on actual data. Our vision is to provide a tool to researchers and practitioners that is able to produce realistic input data for simulation studies. OpenGridMap will support the entire process from data collection to formatting grid data for various purposes. We explore innovative ways to capture data and produce power grid approximations, e.g., using smartphone apps, drones, expert classification, existing map APIs, and graph inference algorithms. We are still in the early developing phase and we could really use your help. Join us and lets map the world\'s power grid!!! <a href="https://www.facebook.com/opengridmap">facebook page</a></string>
    <string name="label_contact">Contact</string>
    <string name="text_contact">For any inquiries please contact Jose (<a href="mailto:j.rivera@tum.de">j.rivera@tum.de</a>). The project was started by the chair for applications and middleware systems of TU Munich and is supported by a German Federal Ministry of Education and Research grant (BMBF 01IS12057) and the Alexander von Humbolt Foundation.</string>
    <string name="key_power_element_id" translatable="false">power_element_id</string>
    <string name="key_submission_id" translatable="false">submission_id</string>
    <string name="key_upload_queue_id" translatable="false">upload_queue_id</string>
    <string name="key_upload_completion" translatable="false">upload_completion</string>
    <string name="json_key_data_packet" translatable="false">data_packet</string>
    <string name="json_key_hash" translatable="false">hash</string>
    <string name="json_key_id_token" translatable="false">id_token</string>
    <string name="json_key_submission_id" translatable="false">submission_id</string>
    <string name="json_key_image" translatable="false">image</string>
    <string name="json_key_number_of_points" translatable="false">number_of_points</string>
    <string name="json_key_point" translatable="false">point</string>
    <string name="json_key_latitude" translatable="false">latitude</string>
    <string name="json_key_longitude" translatable="false">longitude</string>
    <string name="json_key_properties" translatable="false">properties</string>
    <string name="json_key_tags" translatable="false">tags</string>
    <string name="json_key_type" translatable="false">type</string>
    <string name="json_key_accuracy" translatable="false">accuracy</string>
    <string name="json_key_altitude" translatable="false">altitude</string>
    <string name="json_key_no_of_satellites" translatable="false">no_of_satellites</string>
    <string name="json_key_timestamp" translatable="false">timestamp</string>
    <string name="json_key_power_element_tags" translatable="false">power_element_tags</string>
    <string name="json_value_point" translatable="false">point</string>
    <string name="response_key_status" translatable="false">status</string>
    <string name="response_key_received_data" translatable="false">received_data</string>
    <string name="response_error_invalid_id_token" translatable="false">Invalid Id Token</string>
    <string name="response_status_ok" translatable="false">ok</string>
    <string name="label_latitude">Latitude : </string>
    <string name="label_longitude">Longitude : </string>
    <string name="label_accuracy">Accuracy : </string>
    <string name="title_best_point">Best Point</string>
    <string name="title_accuracy">Accuracy</string>
    <string name="label_worst_accuracy">Worst Accuracy</string>
    <string name="label_mean_accuracy">Mean Accuracy</string>
    <string name="label_best_accuracy">Best Accuracy</string>
    <string name="label_no_of_images">No. of Images : </string>
    <string name="label_status">Status : </string>
    <string name="label_mean_distance">Mean Distance between Images : </string>
    <string name="submission_status_invalid">Invalid Submission</string>
    <string name="submission_status_capture_pending">Image Capture Pending</string>
    <string name="submission_status_capture_in_progress">Image Capture in Progress</string>
    <string name="submission_status_confirmed">Submission Confirmed</string>
    <string name="submission_status_upload_pending">Submission Confirmed, Upload pending</string>
    <string name="submission_status_upload_in_progress">Upload in Progress</string>
    <string name="submission_status_submitted_pending_review">Submission Uploaded Successfully</string>
    <string name="submission_status_submitted_approved">Submission Approved</string>
    <string name="submission_status_submitted_rejected">Submission Rejected</string>
    <string name="location_message_acquiring">Acquiring Location</string>
    <string name="location_message_lost">Location lost, Acquiring Location</string>
    <string name="location_message_error">Location lost, Reacquiring</string>
    <string name="camera_message_saving_images">Saving Images</string>
    <string name="camera_message_saving_image">Saving Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="coordinates_format" formatted="false">%1$s° %2$s\' %3$.5s\" %4$s</string>
    <string name="degree" translatable="false">°</string>
    <string name="minute" translatable="false">\'</string>
    <string name="seconds" translatable="false">\"</string>
    <string name="north" translatable="false">N</string>
    <string name="south" translatable="false">S</string>
    <string name="east" translatable="false">E</string>
    <string name="west" translatable="false">W</string>
    <string name="unit_metre" translatable="false">m</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_sync_wifi_only">pref_key_sync_wifi_only</string>
    <string name="pref_title_sync_wifi_only">Wi-Fi Only</string>
    <string name="pref_key_signed_in">pref_key_signed_in</string>
    <string name="key_location_start">location_start</string>
    <string name="key_location_result">location_result</string>
    <string name="key_image_src">image_src</string>
    <string name="Complete">Finish</string>
    <string name="Error">Error…Try Uploading again</string>
    <string name="Upload">Upload</string>
    <string name="Retry">Retry</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_accuracy_not_acceptable">Location accuracy too low</string>
    <string name="location_accuracy_not_ideal">Location accuracy not the best…Try again?</string>
    <string name="location_accuracy_good">Good data…Try again for better location accuracy?</string>
    <string name="location_accuracy_excellent">Nice Work!!!…Excellent accuracy</string>
    <string name="accuracy">Accuracy</string>
    <string name="colon">" : "</string>
    <string name="meter">m</string>
    <string name="newline">\n</string>
    <string name="upload_complete">Upload Complete\n</string>
    <string name="upload_failed">Upload Failed\n</string>
    <string name="upload_submission_error">Error Saving Submission\n</string>
    <string name="upload_in_progress">Thank You!..The point will be submitted now.</string>
    <string name="upload_in_progress_wifi_only">Thank You!..The point will be submitted when the device connects to WiFi.</string>
    <string name="no_internet">No Internet Connectivity\n</string>
    <string name="upload_later">Upload later</string>
    <string name="title_activity_power_element_detail">PowerElementDetailActivity</string>
    <string name="msg_permissions_required">All the permissions are required for the app to function properly. Please grant all the required Permissions.</string>
    <string name="opengridmap">Open Grid Map</string>
    <string name="permissions">Permissions</string>
    <string name="msg_request_permissions">We need some permissions for the app to work properly. Touch next to continue</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="desc_transformer">A transformer is an electrical device that transfers electrical energy between two or more circuits through electromagnetic induction. Electromagnetic induction produces an electromotive force within a conductor which is exposed to time varying magnetic fields. Transformers are used to increase or decrease the alternating voltages in electric power applications.</string>
    <string name="desc_substation">A substation is a part of an electrical generation, transmission, and distribution system. Substations transform voltage from high to low, or the reverse, or perform any of several other important functions. Between the generating station and consumer, electric power may flow through several substations at different voltage levels.</string>
    <string name="desc_generator">A power station, also referred to as a generating station, power plant, powerhouse, or generating plant, is an industrial facility for the generation of electric power. Most power stations contain one or more generators, a rotating machine that converts mechanical power into electrical power. The relative motion between a magnetic field and a conductor creates an electrical current. The energy source harnessed to turn the generator varies widely. Most power stations in the world burn fossil fuels such as coal, oil, and natural gas to generate electricity. Others use nuclear power, but there is an increasing use of cleaner renewable sources such as solar, wind, wave and hydroelectric.</string>
</resources>