<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_submissions"
        android:title="@string/action_submissions"
        android:icon="@drawable/ic_photo_library_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
