<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/submission_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_no_of_images"
                android:labelFor="@id/submission_no_of_images"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/submission_no_of_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <include layout="@layout/divider_hr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_best_point"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_latitude" />

                <TextView
                    android:id="@+id/submission_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_longitude" />

                <TextView
                    android:id="@+id/submission_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_accuracy" />

                <TextView
                    android:id="@+id/submission_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <include layout="@layout/unit_metre" />

            </LinearLayout>

            <include layout="@layout/divider_hr" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_accuracy"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_worst_accuracy" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/submission_worst_accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <include layout="@layout/unit_metre" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:orientation="vertical" >

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mean_accuracy" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/submission_mean_accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <include layout="@layout/unit_metre" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_best_accuracy" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/submission_best_accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <include layout="@layout/unit_metre" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/divider_hr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mean_distance" />

            <TextView
                android:id="@+id/submission_mean_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include layout="@layout/unit_metre" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>