<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tanuj.opengridmap.views.fragments.LoginActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="60"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:layout_gravity="center"
            android:src="@drawable/open_grid_map_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@android:style/TextAppearance.Large"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_section"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="@style/Widget.AppCompat.Spinner"
            android:background="#00000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_section"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_in"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/plus_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/plus_sign_out_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/plus_sign_out_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus_sign_out" />

            <Button
                android:id="@+id/plus_disconnect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus_disconnect" />

        </LinearLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
